Fixes 358 Save bar stuck

--- a/src/components/EntryEditor/EntryEditor.css
+++ b/src/components/EntryEditor/EntryEditor.css
@@ -40,3 +40,10 @@
   background: var(--backgroundColor);
   text-align: right;
 }
+
+.noPreviewEditorContainer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 100%;
+}
